# task6_sum_of_it_parts

./: CMakeLists.txt
src/: parts.cpp  parts.h
